scheduler updated